--- a/my-app/angular.json
+++ b/my-app/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/assets/icomoon/style.css",
               "src/styles.css"
             ],
             "scripts": []
